# Nucle-OS

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-vscode-extension.yml  release.yml
docs/: architecture.md  effects.md  errors.md  grammar.md  packages.md  references.md  stdlib.md
docs/examples/: README.md  archive_fn.nsl  archive_fn.nsl.snap  closure_retry.nsl  closure_retry.nsl.snap  control_flow.nsl  control_flow.nsl.snap  critical_redundancy_warning.nsl  critical_redundancy_warning.nsl.snap  effect_annotated_closure.nsl  effect_annotated_closure.nsl.snap  effect_confirmations.nsl  effect_confirmations.nsl.snap  explicit_type_args_and_file_param.nsl  explicit_type_args_and_file_param.nsl.snap  generic_pool_recovery.nsl  generic_pool_recovery.nsl.snap  hero.nsl  hero.nsl.snap  match_result_fallback.nsl  match_result_fallback.nsl.snap  minimal.nsl  minimal.nsl.snap  multi_store_search.nsl  multi_store_search.nsl.snap  nanopore_recovery_warning.nsl  nanopore_recovery_warning.nsl.snap  patient_records_2026.csv  pipeline_backup.nsl  pipeline_backup.nsl.snap  preset_imports.nsl  preset_imports.nsl.snap  probabilistic_recovery.nsl  probabilistic_recovery.nsl.snap  recovery_plan.nsl  recovery_plan.nsl.snap  result_fallback_store.nsl  result_fallback_store.nsl.snap  retrieve_query.nsl  retrieve_query.nsl.snap  (+19 more)
docs/examples/failures/: README.md  missing_confirmation.nsl  unconfirmed_function_delete.nsl
docs/examples/fixtures/: sample.fasta  small_text.txt
docs/examples/fixtures/project_tree/: README.md  config.json  notes.txt
docs/examples/fixtures/project_tree/data/: log.txt  values.csv
editors/vscode/nuclescript/: .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/nuclescript/src/: cliDownload.ts  download.ts  extension.ts  formatProvider.ts  runProvider.ts  serverDownload.ts
editors/vscode/nuclescript/syntaxes/: nuclescript.tmLanguage.json
nucle_agent/: Cargo.toml
nucle_agent/src/: executor.rs  lib.rs  planner.rs  tools.rs
nucle_blockdev/: Cargo.toml
nucle_blockdev/src/: blob.rs  device.rs  lib.rs  rewritable_nanopore.rs  support.rs  synthesis_array.rs
nucle_cli/: Cargo.toml
nucle_cli/src/: main.rs
nucle_cli/tests/: audit.rs  capacity.rs  concurrency.rs  confirm_users.rs  encrypt_pool.rs  namespace.rs  nanopore_benchmark.rs  persistence.rs  scan.rs  serve.rs  tenants.rs
nucle_codec/: Cargo.toml
nucle_codec/src/: base.rs  benchmark.rs  constraints.rs  fountain.rs  lib.rs  ternary.rs  yinyang.rs
nucle_demo_core/: Cargo.toml
nucle_demo_core/src/: lib.rs
nucle_ecc/: Cargo.toml
nucle_ecc/src/: consensus.rs  fountain_code.rs  lib.rs  pipeline.rs  reed_solomon.rs
nucle_hardware/: Cargo.toml  build.rs
nucle_hardware/proto/minknow_api/: README.md  acquisition.proto  analysis_configuration.proto  basecaller.proto  manager.proto  protocol.proto  protocol_settings.proto
nucle_hardware/src/: confirm.rs  delayed_mock.rs  file_export.rs  http_client.rs  idt.rs  illumina.rs  lib.rs  mock.rs  nanopore.rs  provider.rs  twist.rs
nucle_index/: Cargo.toml
nucle_index/src/: crispr_sim.rs  lib.rs  primer.rs  search.rs  vector_index.rs
nucle_lang/: Cargo.toml
nucle_lang/src/: ast.rs  codegen.rs  diagnostics.rs  docgen.rs  effects.rs  formatter.rs  hardware.rs  lexer.rs  lib.rs  lockfile.rs  middle.rs  package.rs  parser.rs  playground.rs  probabilistic.rs  sim_backend.rs  stdlib.rs  test_runner.rs  typeck.rs  value.rs
nucle_lang/tests/: check.rs  closures.rs  control_flow.rs  docgen.rs  enums.rs  explain.rs  formatter.rs  functions.rs  generics.rs  pattern_matching.rs  result_backward_compat.rs  result_error_propagation.rs  stdlib.rs  test_runner.rs
nucle_lang/tests/fixtures/: execution_baseline.txt
nucle_lsp/: Cargo.toml
nucle_lsp/src/: backend.rs  lib.rs  main.rs
nucle_lsp/tests/: diagnostics.rs
nucle_playground/: Cargo.toml
nucle_playground/src/: main.rs
nucle_playground/static/: index.html
nucle_synth/: Cargo.toml
nucle_synth/src/: errors.rs  lib.rs  noise.rs  profiles.rs  strand.rs
nucle_synth/tests/: e2e_pipeline.rs
nucle_vfs/: Cargo.toml
nucle_vfs/src/: audit.rs  catalog.rs  confirm_policy.rs  crypto.rs  file.rs  lib.rs  metrics.rs  migrate.rs  pool.rs  scan.rs  syscall.rs
nucle_vfs/tests/: full_stack_e2e.rs  regression.rs
nucle_wasm/: Cargo.toml
nucle_wasm/src/: lib.rs
nucle_wasm/www/: index.html
