[workspace]
resolver = "2"
members = [
    "nucle_codec",
    "nucle_synth",
    "nucle_ecc",
    "nucle_index",
    "nucle_vfs",
    "nucle_agent",
    "nucle_lang",
    "nucle_cli",
    "nucle_hardware",
    "nucle_playground",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Vyom Kulshrestha"]
license = "MIT"
repository = "https://github.com/VyomKulshrestha/Nucle-OS"
description = "A complete software-defined DNA storage engine"

[workspace.dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "=4.4.18", features = ["derive"] }
sha2 = "0.10"
bitvec = "1.0"
