[workspace]
resolver = "2"
members = [
    "nucle_codec",
    "nucle_synth",
    "nucle_ecc",
    "nucle_index",
    "nucle_vfs",
    "nucle_agent",
    "nucle_lang",
    "nucle_cli",
    "nucle_hardware",
    "nucle_blockdev",
    "nucle_playground",
    "nucle_demo_core",
    "nucle_wasm",
    "nucle_lsp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Vyom Kulshrestha"]
license = "MIT"
repository = "https://github.com/VyomKulshrestha/Nucle-OS"
description = "A complete software-defined DNA storage engine"

[workspace.dependencies]
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "=4.4.18", features = ["derive"] }
sha2 = "0.10"
bitvec = "1.0"
fd-lock = "4"
argon2 = "0.5.3"
chacha20poly1305 = "0.11.0"
tiny_http = "0.12"
ureq = { version = "3", features = ["json"] }
tonic = { version = "0.14", features = ["tls-ring"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
base64 = "0.22"
tokio = { version = "1", features = ["rt"] }
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"

# nucle_ecc's Reed-Solomon/GF(256) arithmetic and nucle_ecc::consensus's
# partial-order-alignment DP are genuinely CPU-heavy -- at debug opt-level
# 0, a realistic-coverage Nanopore recovery test that takes single-digit
# seconds optimized takes multiple *minutes* unoptimized, since the field
# arithmetic and O(read_len x graph_size) alignment inner loops get zero
# optimization. Opting just these two crates into a higher opt-level even
# in dev/test builds keeps normal `cargo build`/incremental edits to
# nucle_cli/nucle_lang/etc. exactly as fast as before (this only affects
# how nucle_ecc/nucle_codec's own code gets compiled, not anything that
# depends on them, and Cargo caches the result), while making the
# always-run consensus/ECC tests actually fast to run.
[profile.dev.package.nucle_ecc]
opt-level = 3

[profile.dev.package.nucle_codec]
opt-level = 3

# nucle_blockdev's coverage-depth noise injection calls nucle_synth's
# NoiseEngine (per-base error application, looped per copy per strand)
# often enough per write/read that it hits the same unoptimized-debug-build
# wall the two overrides above were added for -- same fix, same reasoning.
[profile.dev.package.nucle_synth]
opt-level = 3

[profile.dev.package.nucle_blockdev]
opt-level = 3
