[package]
name = "nucle_codec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DNA encoding/decoding engine — binary to ATCG with biological constraints"

[dependencies]
rand = { workspace = true }
bitvec = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
