[package]
name = "nucle_codec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DNA encoding/decoding engine — binary to ATCG with biological constraints"

[dependencies]
rand = { workspace = true }
bitvec = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
# std::time::Instant panics on wasm32-unknown-unknown ("time not implemented
# on this platform"); web-time re-exports std's Instant unchanged on every
# other target and backs it with `Performance.now()` in the browser, so
# benchmark_codec's timing works natively AND compiled to WASM.
web-time = "1.1"

[dev-dependencies]
env_logger = { workspace = true }
