[package]
name = "nucle_demo_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nucle_codec = { path = "../nucle_codec" }
nucle_synth = { path = "../nucle_synth" }
nucle_ecc = { path = "../nucle_ecc" }
serde = { workspace = true }
serde_json = { workspace = true }
