[package]
name = "nucle_synth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DNA synthesis simulator — models realistic error profiles of sequencing hardware"

[dependencies]
nucle_codec = { path = "../nucle_codec" }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
